Fixed bug with invisible elements
The class invisible elements didn't make elements invisible,
Fixed it with a style add to .element-invisible in the main scss file.

--- a/www/sites/all/themes/g_theme/sass/styles.scss
+++ b/www/sites/all/themes/g_theme/sass/styles.scss
@@ -7,5 +7,7 @@
   grid-column-start: 2;
 }
 
-
+.element-invisible {
+  display: none;
+}
 
